[package]
name = "mbus"
version = "0.0.0"
edition = "2021"

[dependencies]
sn_client = { path = "../../maidsafe/safe_network/sn_client" }
sn_interface = { path = "../../maidsafe/safe_network/sn_interface" }
xor_name = "*"
rand = "0.8"

[dev-dependencies]
tokio = "1"
helpers = { path = "../helpers" }
