[package]
name = "mbus"
version = "0.0.0"
edition = "2021"

[dependencies]
sn_client = { git = "https://github.com/DerickEddington/safe_network.git", branch = "kcired/write-only-registers" }
sn_interface = { git = "https://github.com/DerickEddington/safe_network.git", branch = "kcired/write-only-registers" }
xor_name = "*"
rand = "0.8"

[dev-dependencies]
tokio = "1"
helpers = { path = "../helpers" }
